[package]
name = "tracing-opentelemetry"
version = "0.8.0"
authors = [
    "Julian Tescher <julian@tescher.me>",
    "Tokio Contributors <team@tokio.rs>"
]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/tokio-rs/tracing/tree/master/tracing-opentelemetry"
repository = "https://github.com/tokio-rs/tracing"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "async"]
license = "MIT"
edition = "2018"

[features]
default = ["tracing-log"]

[dependencies]
#opentelemetry = { git = "https://github.com/kstasik/opentelemetry-rust", branch = "test", features = ["trace", "metrics"] }
opentelemetry = { git = "https://github.com/kstasik/opentelemetry-rust", rev = "49f327e14e2cf0cf951db1a9f5ac0b5dd5fd3915", features = ["trace", "metrics"] }

tracing = { path = "../tracing", version = "0.2" }
tracing-core = { path = "../tracing-core", version = "0.2" }
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", default-features = false, features = ["registry"] }
tracing-log = { path = "../tracing-log", version = "0.2", default-features = false, optional = true }

[dev-dependencies]
opentelemetry-jaeger = "0.8"
